[gd_scene load_steps=6 format=3 uid="uid://bviowmjlnp34h"]

[ext_resource type="Script" path="res://scenes/effects/boss_explosion_se/boss_explosion_se.gd" id="1_kvtjl"]
[ext_resource type="AudioStream" uid="uid://dh1x4qmkoywop" path="res://assets/audios/explosions/retro_explosion_general_08.wav" id="1_uv2n6"]

[sub_resource type="Animation" id="Animation_cl3hk"]
resource_name = "play"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplodeSE1:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExplodeSE2:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ExplodeSE3:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ExplodeSE4:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xdmj1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplodeSE1:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExplodeSE2:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ExplodeSE3:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ExplodeSE4:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6cg63"]
_data = {
"RESET": SubResource("Animation_xdmj1"),
"play": SubResource("Animation_cl3hk")
}

[node name="BossExplosionSE" type="Node"]
script = ExtResource("1_kvtjl")

[node name="ExplodeSE1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_uv2n6")
volume_db = -23.363
pitch_scale = 1.2
bus = &"SE"

[node name="ExplodeSE2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_uv2n6")
volume_db = -23.363
pitch_scale = 1.71
bus = &"SE"

[node name="ExplodeSE3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_uv2n6")
volume_db = -23.363
pitch_scale = 1.9
bus = &"SE"

[node name="ExplodeSE4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_uv2n6")
volume_db = -23.363
pitch_scale = 2.0
bus = &"SE"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6cg63")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
